2006-01-22  0.9.48 Roland Clobus <rclobus@bigfoot.com>
	* configure.ac: Scrollkeeper only built when present, and when libgnome
	is present. Protect script variables with ""
	* configure.ac: Added AC_CONFIG_AUX_DIR
	* pioneers.nsi.in: Check the presence of the Gtk+ runtime before
	installing.
	
2006-01-17  0.9.47 Bas Wijnen <shevek@fmf.nl>
	* (Almost) all files: Change FSF postal address, change my e-mail
	address, fixed copyright statements.
	* server/server.h, server/player.c (player_by_name): Make
	player_by_name a static function.

2006-01-15  0.9.46 Roland Clobus <rclobus@bigfoot.com>
	* client/common/chat.c, client/gtk/chat.c, client/gtk/connect.c,
	client/gtk/name.c, common/game.h, server/player.c, server/server.h:
	Limit the maximum length for the chat and player name.
	
2006-01-13  0.9.45 Roland Clobus <rclobus@bigfoot.com>
	* configure.ac: Added Swedish translation, fixed locale dir
	* debian/control, debian/pioneers-client.install,
	debian/pioneers-client.menu, debian/pioneers-server-gtk.install,
	debian/pioneers-server-gtk.menu, debian/rules: Updated Debian files
	* debian/copyright: Updated download URL
	
2006-01-03  0.9.44 Roland Clobus <rclobus@bigfoot.com>
	* configure.ac, client/gtk/data/Makefile.am, editor/gtk/Makefile.am,
	server/gtk/Makefile.am: The svg renderer is called with width and
	height.
	* client/gtk/Makefile.am: Reverted Fink patch of 0.9.40
	* editor/gtk/Makefile.am: Patch for Fink
	
2006-01-02  0.9.43 Roland Clobus <rclobus@bigfoot.com>
	* configure.ac: Build online help only when both libgnome and
	scrollkeeper are present.
	* macros/gnome-autogen.sh: Added bootstrap script from gnome-common
	2.12.0-1
	* macros/ChangeLog, macros/Makefile.am, macros/aclocal-include.m4,
	macros/autogen.sh, macros/compiler-flags.m4, macros/curses.m4,
	macros/gnome-bonobo-check.m4, macros/gnome-common.m4,
	macroos/gnome-cxx-check.m4, macros/gnome-fileutils.m4,
	macros/gnome-gettext.m4, macros/gnome-ghttp-check.m4,