@@ -20,6 +20,7 @@
 
 #include "config.h"
 #include "frontend.h"
+#include "gtkbugs.h"
 #include <gdk/gdkkeysyms.h>
 
 static const int MAX_NUMBER_OF_WIDGETS_PER_EVENT = 2;
@@ -38,67 +39,12 @@ static void set_sensitive(G_GNUC_UNUSED void *key, GuiWidgetState * gui,
 	if (frontend_waiting_for_network)
 		gui->next = FALSE;
 
-	if (gui->widget != NULL && gui->next != gui->current
-	    && GTK_IS_ACTION(gui->widget)) {
-		GSList *widgets;
-		widgets = gtk_action_get_proxies(GTK_ACTION(gui->widget));
-		while (widgets) {
-			GtkWidget *button;
-			gtk_widget_set_sensitive(GTK_WIDGET(widgets->data),
-						 gui->next);
-			/* HACK Workaround for Gtk bug 56070.  If mouse is
-			 * over a toolbar button that becomes sensitive, one
-			 * can't click it without moving the mouse out and in
-			 * again.  This bug is registered in Bugzilla as a Gtk
-			 * bug.  The workaround tests if the mouse is inside
-			 * the currently sensitivized button, and if yes calls
-			 * button_enter().  See also below.  */
-			button = gtk_bin_get_child(GTK_BIN(widgets->data));
-			if (gui->next && GTK_IS_BUTTON(button)) {
-				gint x, y, state;
-				gtk_widget_get_pointer(button, &x, &y);
-				state = GTK_WIDGET_STATE(button);
-				if (state == GTK_STATE_NORMAL &&
-				    x >= 0 && y >= 0 &&
-				    x < button->allocation.width &&
-				    y < button->allocation.height) {
-					gtk_button_enter(GTK_BUTTON
-							 (button));
-					GTK_BUTTON(button)->in_button =
-					    TRUE;
-				}
-			}
-			widgets = g_slist_next(widgets);
-		};
-/** @todo RC 2005-07-12 Instead of the GSList, use gtk_action_set_sensitive */
-/*		gtk_action_set_sensitive(GTK_ACTION(gui->widget),
-				gui->next);
-*/
-		if (gui->next)
-			gtk_action_connect_accelerator(GTK_ACTION
-						       (gui->widget));
-		else
-			gtk_action_disconnect_accelerator(GTK_ACTION
-							  (gui->widget));
-		gui->current = gui->next;
-		gui->next = FALSE;
-		return;
-	}
 	if (gui->widget != NULL && gui->next != gui->current) {
-		gtk_widget_set_sensitive(gui->widget, gui->next);
-		/* HACK Workaround for Gtk bug 56070, like above.  */
-		if (gui->next && GTK_IS_BUTTON(gui->widget)) {
-			gint x, y, state;
-			gtk_widget_get_pointer(gui->widget, &x, &y);
-			state = GTK_WIDGET_STATE(gui->widget);
-			if (state == GTK_STATE_NORMAL &&
-			    x >= 0 && y >= 0 &&
-			    x < (gui->widget)->allocation.width &&
-			    y < (gui->widget)->allocation.height) {
-				gtk_button_enter(GTK_BUTTON(gui->widget));
-				GTK_BUTTON(gui->widget)->in_button = TRUE;
-			}
-		}
+		if (GTK_IS_ACTION(gui->widget))
+			action_set_sensitive(GTK_ACTION(gui->widget),
+					     gui->next);
+		else
+			widget_set_sensitive(gui->widget, gui->next);
 	}
 	gui->current = gui->next;
 	gui->next = FALSE;
